# VML-VitaGL

./: .gitignore  CMakeLists.txt  README.md
cmake/: NuGet.cmake
samples/draw_elements/: CMakeLists.txt  DrawElements.cs  main.c
samples/immediate_mode/: CMakeLists.txt  ImmediateMode.cs  main.c
samples/shared/: DebugLog.cs
samples/triangles/: CMakeLists.txt  Triangles.cs  main.c
samples/vertex_array/: CMakeLists.txt  VertexArray.cs  main.c
src/: CMakeLists.txt  VitaGL.cs  VitaGL.h  main.c
